# KNN_MNIST

./: CMakeLists.txt  KNN.hpp  README.md  main.cpp  utils.hpp
Data/: minimalset.csv
